--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,3 +1,9 @@
+section {
+      background-color: #202036;
+      min-height: 100vh;
+      width: 100vw;
+}
+
 h1 {
   font-family: "Roboto", sans-serif;
   font-size: 50px;
@@ -10,7 +16,7 @@ p{
   color: white;
   font-size: 23px;
   margin: 50px;
-  width: 700px;
+  max-width: 700px;
   text-align: center;
   .bold {
     font-weight: bold;
@@ -29,6 +35,8 @@ display: flex;
 flex-direction: row;
 align-items: center;
   justify-content: center;
+  margin-top: 15vh;
+  max-width: 90%;
 }
 
 .header-img {
@@ -48,38 +56,37 @@ align-items: center;
   margin: 20px;
   margin-top: 100px;
   color: white;
+  height: 40px;
 }
 
+.search-container {
+  margin-bottom: 100px;
+}
 .btn-search {
   background: #5cb8c7;
-  border: none;
   color: white;
-  padding: 5px 10px;
-  border-radius: 5px;
-  width: 200px;
-  height: 45px;
-  margin: 20px;
-  &:focus {
-    outline: none;
+  border-radius: 20px;
+  width:40px;   
+  height: 40px;
+  margin-left: 20px;
+  outline: none;
+  border: none;
   }
-}
+
 
 .search__input {
   padding: 5px;
-  padding-left: 20px;
-  margin-top: 30px;
   background-color: #2a2a44;
   border-radius: 20px;
   border: 1px solid gray;
   width: 200px;
   color: white;
   font-size: 20px;
-}
+  text-align: center;}
 
 .books {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: center;
   list-style-type: none;
   margin: 0;
@@ -125,6 +132,7 @@ align-items: center;
 }
 .star_container {
   margin: auto;
+  margin-top: 10px;
   width: 100px;
   display: flex;
   align-items: center;
@@ -141,12 +149,12 @@ align-items: center;
   margin-left: 50px;
   margin-top: -18px;
 }
-.full_stars {
-  // transform: translateX(-20px);
-}
 
 fa-icon {
   margin-top: 10px;
   font-size: 20px;
-  // text-align: left;
+}
+
+@media screen and (max-width:560px) {
+  .imgh1{flex-direction: column;}
 }
